--- a/Oficial3.csproj
+++ b/Oficial3.csproj
@@ -100,6 +100,11 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\index.css" />
+    <Content Include="Content\login.css" />
+    <Content Include="Content\mercedes.jpg" />
+    <Content Include="Content\paças2.jpg" />
+    <Content Include="Content\peças.jpg" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
