--- a/Web.config
+++ b/Web.config
@@ -41,8 +41,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="catalogoOficialEntities" connectionString="metadata=res://*/Models.Banco.csdl|res://*/Models.Banco.ssdl|res://*/Models.Banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WINDOWS;initial catalog=catalogoOficial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="Banco" connectionString="data source=WINDOWS;initial catalog=catalogoOficial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /><add name="catalogoOficialEntities" connectionString="metadata=res://*/Models.Banco.csdl|res://*/Models.Banco.ssdl|res://*/Models.Banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WINDOWS;initial catalog=catalogoOficial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
@@ -51,6 +50,6 @@
     </defaultConnectionFactory>
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
-    </providers>
+    </providers>type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"
   </entityFramework>
 </configuration>
