--- a/bin/Oficial3.dll.config
+++ b/bin/Oficial3.dll.config
@@ -41,8 +41,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="catalogoOficialEntities" connectionString="metadata=res://*/Models.Banco.csdl|res://*/Models.Banco.ssdl|res://*/Models.Banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WINDOWS;initial catalog=catalogoOficial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+    <add name="Banco" connectionString="data source=WINDOWS;initial catalog=catalogoOficial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="catalogoOficialEntities" connectionString="metadata=res://*/Models.Banco.csdl|res://*/Models.Banco.ssdl|res://*/Models.Banco.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WINDOWS;initial catalog=catalogoOficial;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
